// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InsightsSummary > should render the summary correctly 1`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs"></ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > should render the summary correctly 2`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>525 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-up" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 85%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>14 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>1.9 <i>%</i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>55.56 <i>h</i></em><small class="negative"><n8n-icon-stub icon="chevron-down" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 5.16h</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-down" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > should render the summary correctly 3`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>525 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-up" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 85%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>14 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>1.9 <i>%</i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span class="empty"><em>--</em><small><span class="" data-state="closed" data-grace-area-trigger=""><n8n-icon-stub icon="info" size="medium" spin="false" class="icon"></n8n-icon-stub></span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-down" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > should render the summary correctly 4`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>525 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-down" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 2%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>14 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>1.9 <i>%</i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>55.56 <i>h</i></em><small class="neutral"><n8n-icon-stub icon="chevron-right" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0h</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-up" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > should render the summary correctly 5`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>525 <i></i></em><!--v-if--></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>14 <i></i></em><!--v-if--></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>1.9 <i>%</i></em><!--v-if--></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>55.56 <i>h</i></em><!--v-if--></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>2.5 <i>s</i></em><!--v-if--></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > should render the summary correctly 6`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>0 <i></i></em><small class="neutral"><n8n-icon-stub icon="chevron-right" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>0 <i></i></em><small class="neutral"><n8n-icon-stub icon="chevron-right" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>0 <i>%</i></em><small class="neutral"><n8n-icon-stub icon="chevron-right" spin="false" class="icon neutral"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span class="empty"><em>--</em><small><span class="" data-state="closed" data-grace-area-trigger=""><n8n-icon-stub icon="info" size="medium" spin="false" class="icon"></n8n-icon-stub></span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>0 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-right" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > with different date ranges > should render with 'custom range' 1`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">6 Sep - 13 Sep, 2025</small><span><em>525 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-up" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 85%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">6 Sep - 13 Sep, 2025</small><span><em>14 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">6 Sep - 13 Sep, 2025</small><span><em>1.9 <i>%</i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">6 Sep - 13 Sep, 2025</small><span><em>55.55 <i>h</i></em><small class="negative"><n8n-icon-stub icon="chevron-down" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 5.16h</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">6 Sep - 13 Sep, 2025</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-down" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > with different date ranges > should render with 'last 7 days (week preset)' 1`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>525 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-up" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 85%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>14 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>1.9 <i>%</i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>55.55 <i>h</i></em><small class="negative"><n8n-icon-stub icon="chevron-down" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 5.16h</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">Last 7 days</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-down" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > with different date ranges > should render with 'last 14 days (2weeks preset)' 1`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">Last 14 days</small><span><em>525 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-up" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 85%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">Last 14 days</small><span><em>14 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">Last 14 days</small><span><em>1.9 <i>%</i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">Last 14 days</small><span><em>55.55 <i>h</i></em><small class="negative"><n8n-icon-stub icon="chevron-down" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 5.16h</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">Last 14 days</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-down" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > with different date ranges > should render with 'last 24 hours (day preset)' 1`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">Last 24 hours</small><span><em>525 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-up" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 85%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">Last 24 hours</small><span><em>14 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">Last 24 hours</small><span><em>1.9 <i>%</i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">Last 24 hours</small><span><em>55.55 <i>h</i></em><small class="negative"><n8n-icon-stub icon="chevron-down" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 5.16h</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">Last 24 hours</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-down" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > with different date ranges > should render with 'last 30 days (month preset)' 1`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">Last 30 days</small><span><em>525 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-up" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 85%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">Last 30 days</small><span><em>14 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">Last 30 days</small><span><em>1.9 <i>%</i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">Last 30 days</small><span><em>55.55 <i>h</i></em><small class="negative"><n8n-icon-stub icon="chevron-down" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 5.16h</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">Last 30 days</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-down" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > with different date ranges > should render with 'last 90 days (quarter preset)' 1`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">Last 90 days</small><span><em>525 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-up" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 85%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">Last 90 days</small><span><em>14 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">Last 90 days</small><span><em>1.9 <i>%</i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">Last 90 days</small><span><em>55.55 <i>h</i></em><small class="negative"><n8n-icon-stub icon="chevron-down" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 5.16h</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">Last 90 days</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-down" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > with different date ranges > should render with 'last 180 days (6months preset)' 1`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">6 months</small><span><em>525 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-up" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 85%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">6 months</small><span><em>14 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">6 months</small><span><em>1.9 <i>%</i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">6 months</small><span><em>55.55 <i>h</i></em><small class="negative"><n8n-icon-stub icon="chevron-down" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 5.16h</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">6 months</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-down" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;

exports[`InsightsSummary > with different date ranges > should render with 'last 365 days (year preset)' 1`] = `
"<div class="insightsWrapper">
  <div class="insights">
    <ul data-test-id="insights-summary-tabs">
      <li data-test-id="insights-summary-tab-total"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Prod. executions</span>
        <!--v-if--></strong><small class="days">One year</small><span><em>525 <i></i></em><small class="positive"><n8n-icon-stub icon="chevron-up" spin="false" class="icon positive"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 85%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failed"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failed prod. executions</span>
        <!--v-if--></strong><small class="days">One year</small><span><em>14 <i></i></em><small class="negative"><n8n-icon-stub icon="chevron-up" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 3%</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-failureRate"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Failure rate</span>
        <!--v-if--></strong><small class="days">One year</small><span><em>1.9 <i>%</i></em><small class="positive"><n8n-icon-stub icon="chevron-down" spin="false" class="icon positive"></n8n-icon-stub><span class="" data-state="closed" data-grace-area-trigger=""> 0.8pp</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-timeSaved"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="" data-state="closed" data-grace-area-trigger=""> Time saved</span>
        <!--v-if--></strong><small class="days">One year</small><span><em>55.55 <i>h</i></em><small class="negative"><n8n-icon-stub icon="chevron-down" spin="false" class="icon negative"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 5.16h</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
      <li data-test-id="insights-summary-tab-averageRunTime"><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""><a to="[object Object]" exact-active-class="activeTab"><strong><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> Run time (avg.)</span>
        <!--v-if--></strong><small class="days">One year</small><span><em>2.5 <i>s</i></em><small class="neutral"><n8n-icon-stub icon="chevron-down" spin="false" class="icon neutral"></n8n-icon-stub><span class="disabledTrigger" data-state="closed" data-grace-area-trigger=""> 0.5s</span>
        <!--v-if--></small></span></a></span>
        <!--v-if-->
      </li>
    </ul>
  </div><!-- TODO: This should be removed after some time when the number issue is behind us -->
</div>"
`;
